Thu Dec 15 11:00:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged timer_policy branch.

        === start changelog ===

        Thu Dec 15 09:45:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * NEWS:

                  Added description of new TIME_POLICY features.

                * tests/Timer_Queue_Test.cpp:

                  Added explicit test of specific TIME_POLICY feature.

        Mon Dec 12 21:28:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * ace/Abstract_Timer_Queue.h:
                * ace/Time_Policy.h:
                * ace/Time_Policy.inl:
                * ace/Time_Policy_T.h:
                * ace/Time_Policy_T.inl:
                * ace/Timer_Queue_T.cpp:
                * ace/Timer_Queue_T.h:
                * tests/Timer_Queue_Test.cpp:

                  Added backwards compatibility support.

        Mon Dec 05 10:26:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * ace/Time_Policy.inl

                  Prevent setting delegate to null pointer.

        Sun Dec 04 15:40:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

                * ace/Countdown_Time.cpp:
                * ace/Countdown_Time.inl:

                  Renamed to *_T.*

                * ace/Countdown_Time.h
                * ace/Countdown_Time_T.cpp
                * ace/Countdown_Time_T.h
                * ace/Countdown_Time_T.inl

                  Changed ACE_Countdown_Time to TIME_POLICY based
                  template class ACE_Countdown_Time_T,
                  Created typedef for default template instantiation
                  as ACE_Countdown_Time.

                * ace/Time_Policy.cpp
                * ace/Time_Policy.h
                * ace/Time_Policy.inl
                * ace/Time_Policy_T.cpp
                * ace/Time_Policy_T.h
                * ace/Time_Policy_T.inl

                  Added support for dynamically loadable/shared time
                  policies.
