@@ -1,3 +1,12 @@
+Thu Dec 15 12:52:18 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * ace/Abstract_Timer_Queue.h:
+        * ace/Abstract_Timer_Queue.cpp:
+        * ace/Event_Handler_Handle_Timeout_Upcall.h:
+        * ace/Timer_Queue_Iterator.h:
+        * ace/Timer_Queue_Iterator.cpp:
+          Fuzz. Added Id-tags.
+
 Thu Dec 15 11:00:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         Merged timer_policy branch.
